<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.navigation.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fruit_plants"
        android:name="com.android.navigation.ui.gallery.GalleryFragment"
        android:label="@string/fruit_plants"
        tools:layout="@layout/fragment_fruit_plants" />

    <fragment
        android:id="@+id/nav_flowering_plants"
        android:name="com.android.navigation.ui.slideshow.SlideshowFragment"
        android:label="@string/flowering_plants"
        tools:layout="@layout/fragment_flowering_plants" />

    <fragment
        android:id="@+id/nav_cactus_succulent"
        android:name="com.android.navigation.ui.tools.ToolsFragment"
        android:label="@string/cactus_succulent"
        tools:layout="@layout/fragment_cactus_succulent" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.android.navigation.ui.share.ShareFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.android.navigation.ui.send.SendFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact_us" />
</navigation>